# job_parser

./: README.md  pyproject.toml
src/: config.py  dbmanager.py  main.py  utils.py
